# qbittorrentui-kurl-edition

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
src/qbittorrentui/: config.py  connector.py  daemon.py  default.ini  events.py  main.py  misc_widgets.py  themes.py
src/qbittorrentui/windows/: application.py  rss.py  torrent.py  torrent_list.py
