[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbittorrentui"
version = "0.4.0"
requires-python = ">=3.10"
description = "Console UI for qBittorrent v4.1+ (Kurl Edition)"
authors = [{name = "Russell Martin"}, {name = "jkpair"}]
maintainers = [{name = "jkpair"}]
keywords = ["qbittorrent", "console", "terminal", "TUI", "text"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: File Sharing",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["readme"]
dependencies = [
    "qbittorrent-api",
    "urwid ==3.0.3",
    "blinker ==1.9.0",
    "panwid ==0.3.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
]

[project.urls]
"Homepage" = "https://github.com/jkpair/qbittorrentui-kurl-edition"
"Source" = "https://github.com/jkpair/qbittorrentui-kurl-edition"
"Upstream" = "https://github.com/rmartin16/qbittorrentui"

[project.scripts]
qbittorrentui = "qbittorrentui.__main__:main"

[tool.setuptools.dynamic]
readme = {file = ["README.md", "LICENSE"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.isort]
profile = "black"
